<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="20dp"
    android:elevation="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emin_misiniz"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorTextSecondary"
            android:paddingBottom="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonPositive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sil"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/buttonNegative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:text="@string/kapat"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@color/colorTextSecondary" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>


