<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".SignUpFragment">

       <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:src="@drawable/background2"
        android:scaleType="centerCrop" />
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/kayit_ol"
                  android:textAlignment="center"
                  android:textSize="40sp"
                  android:fontFamily="@font/lobster"
                  android:layout_gravity="center"
                  android:textColor="@color/colorTextSecondary" />


            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_user"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:textColor="@color/colorTextSecondary"
                android:backgroundTint="#CCCCCC"
                android:textColorHint="@color/colorTextSecondary"
                android:fontFamily="@font/amaranth"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#CCCCCC"
                android:textColorHint="@color/colorTextSecondary"
                android:drawableStart="@drawable/ic_password"
                android:padding="10dp"
                android:textColor="@color/colorTextSecondary"
                android:drawablePadding="10dp"
                android:fontFamily="@font/amaranth"
                android:hint="@string/ifre"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:textColor="@color/colorTextSecondary"
                android:padding="10dp"
                android:backgroundTint="#CCCCCC"
                android:textColorHint="@color/colorTextSecondary"
                android:fontFamily="@font/amaranth"
                android:hint="@string/ifre_tekrar"
                android:inputType="textPassword"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textColor="@color/colorTextSecondary"
                android:background="@drawable/btn_login_background"
                android:fontFamily="@font/amaranth"
                android:text="@string/kay_tol"
                android:textSize="20sp"
                android:textAllCaps="false" />


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>